Bug 46809 - : incomplete formula in formula bar
Summary: : incomplete formula in formula bar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 RC1
Hardware: Other All
: high critical
Assignee: Noel Power
URL:
Whiteboard: BSA target:3.6.0 target:3.5.2
Keywords: regression
: 46117 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2012-03-01 01:21 UTC by th
Modified: 2012-08-23 15:10 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
shows the difference between formula bar and cell formula (86.93 KB, image/png)
2012-03-01 13:37 UTC, th
Details

Note You need to log in before you can comment on or make changes to this bug.
Description th 2012-03-01 01:21:33 UTC
Problem description: calc's formula bar will not show the complete formula as it is generated

Steps to reproduce:
1. ....open calc spreadsheet
2. ....in any cell, start writing a formula like "=sumproduct(A2:A330>L12;....
3. ....formula in formula bar differs from formula in cell while typing

Current behavior: see step three

Expected behavior: same formula "step" in formula bar and cell of formula

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (X11; Linux i686) AppleWebKit/535.24 (KHTML, like Gecko) Chrome/19.0.1055.1 Safari/535.24
Comment 1 Jean-Baptiste Faure 2012-03-01 13:16:18 UTC
Please could you provide a screenshot ?
Did you see that LibO-Calc 3.5.0 has now a multiline formula bar ?
http://www.libreoffice.org/download/3-5-new-features-and-fixes/

Best regards. JBF
Comment 2 th 2012-03-01 13:37:50 UTC
Created attachment 57877 [details]
shows the difference between formula bar and cell formula

as per request i have added a screenshot; i know there is a multiline bar, but this does not change the situation regards tom
Comment 3 vitriol 2012-03-13 07:20:50 UTC
Same problem here. The formula bar is not correctly updated, try to click over a cell when typing into formula bar.
Another problem is that updating is very very slow, almost unusable.
Regression from 3.4.x and big usability problem.
Comment 4 Jean-Baptiste Faure 2012-03-13 13:56:24 UTC
I do not reproduce with LO 3.5.2 rc0+ (Version ID : 75fce8a-720bbeb-73cb0b8-f269e46-686380c) under Ubuntu 11.10 x86_64 with gnome-shell. Not tested with Unity.
Best regards. JBF
Comment 5 vitriol 2012-03-13 14:03:39 UTC
Maybe Windows specific?
Comment 6 Jean-Baptiste Faure 2012-03-13 14:17:07 UTC
(In reply to comment #5)
> Maybe Windows specific?

I do not think so, the screenshot shows an Ubuntu screen.
Comment 7 vitriol 2012-03-13 14:23:43 UTC
Open Calc, push "=" button in the formula bar and then click over a cell -> formula bar not updated.
Comment 8 tommy27 2012-03-14 00:00:28 UTC
has anybody tried LibO 3.5.1 RC1 and RC2?

is the bug still there?
Comment 9 vitriol 2012-03-14 00:05:09 UTC
(In reply to comment #8)
> has anybody tried LibO 3.5.1 RC1 and RC2?
> 
> is the bug still there?

Yes, it is.
Comment 10 Eike Rathke (retired, only occasionally showing up) 2012-03-14 08:40:38 UTC
I can't reproduce the original problem (type in cell and input line is not updated), but I can reproduce that a click on cell or a selection of range adds the cell/range only to the formula in the cell, but not in the input line.

@Noel: your's?
Comment 11 vitriol 2012-03-14 08:50:30 UTC
(In reply to comment #10)

> I can't reproduce the original problem (type in cell and input line is not
> updated)

I suspect that the original problem may be due to the fact that in certain conditions (I don't know which...) the formula bar updating become very slow.
However, I think it may be a different problem after all.
Comment 12 Noel Power 2012-03-15 02:16:40 UTC
(In reply to comment #10)
> I can't reproduce the original problem (type in cell and input line is not
> updated), but I can reproduce that a click on cell or a selection of range adds
> the cell/range only to the formula in the cell, but not in the input line.
> 
> @Noel: your's?

I guess :-( Also I can only reproduce the range selection only updating the cell content but not the inputbar
Comment 13 Not Assigned 2012-03-15 13:15:20 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e3b1592165d0513e90e28dfee92bc9db032fa221

fix to update inputbar when setting a range for a formula fdo#46809
Comment 14 vitriol 2012-03-15 23:01:30 UTC
Is there any chance to see this fix in version 3.5.x? With this bug Calc is
almost unusable for me...
Thank you.
Comment 15 Not Assigned 2012-03-16 13:27:14 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c39e96d984b5907f8e0c0247828c8e35f2e9ce72&g=libreoffice-3-5

fix to update inputbar when setting a range for a formula fdo#46809


It will be available in LibreOffice 3.5.2.
Comment 16 vitriol 2012-03-16 23:22:06 UTC
Thank you Noel.
Comment 17 th 2012-03-23 09:14:33 UTC
seems to be resolved in LO 3.5.2rc1, i've tested and it look ok. good job, thx.
Comment 18 Rainer Bielefeld Retired 2012-03-24 09:52:41 UTC
Fix is in 3.5, 3.6, there will be no 3.4.7, so I closed tis one. Please feel free to reopen if I did wrong.
Comment 19 Roman Eisele 2012-08-23 15:08:23 UTC
*** Bug 46117 has been marked as a duplicate of this bug. ***
Comment 20 Roman Eisele 2012-08-23 15:10:31 UTC
VERIFIED FIXED with LibreOffice 3.5.6.2 (Build ID: e0fbe70-dcba98b-297ab39-994e618-0f858f), German langpack installed, on MacOS X 10.6.8 (Intel).