fix to update inputbar when setting a range for a formula fdo#46809